--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PZ'
 - !lcsh 'Rabbits -- Juvenile fiction'
+- GITenberg
 title: The Tale of Peter Rabbit
 url: http://www.gutenberg.org/ebooks/14304
